--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /FolhaDePagamento/nbproject/private/
 /FolhaDePagamento/build/
+/MaquinaDeRefrigerante/nbproject/private/
+/MaquinaDeRefrigerante/build/
+/MaquinaDeRefrigerante/dist/
