--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /MaquinaDeRefrigerante/nbproject/private/
 /MaquinaDeRefrigerante/build/
 /MaquinaDeRefrigerante/dist/
+/ProdutosMVC/nbproject/private/
+/ProdutosMVC/build/
